namespaces/iam/ory-hydra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ory-hydra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ory-hydra
  template:
    metadata:
      labels:
        app: ory-hydra
    spec:
      containers:
        - name: ory-hydra
          image: ghcr.io/toandos/hydra:latest
          ports:
            - name: http
              containerPort: 4444
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
