namespaces/iam/ory-hydra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ory-hydra
spec:
  selector:
    app: ory-hydra
  ports:
    - name: http
      port: 4444
      targetPort: http
