namespaces/iam/ory-hydra/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ory-hydra
spec:
  parentRefs:
    - name: public-gateway
      namespace: traefik

  hostnames:
    - oauth.toando.de

  rules:
    - backendRefs:
        - name: ory-hydra
          port: 4444
